refactor : BakeryController::getBakeryList 리팩토링 진행중.